@@ -105,13 +105,9 @@ def launch(config):
             argv.append("--reactor=win32")
         sys.argv = argv
 
-        # this is copied from bin/twistd. twisted-1.3.0 uses twistw, while
-        # twisted-2.0.0 uses _twistw.
+        # this is copied from bin/twistd. twisted-2.0.0 uses _twistw.
         if platformType == "win32":
-            try:
-                from twisted.scripts._twistw import run
-            except ImportError:
-                from twisted.scripts.twistw import run
+            from twisted.scripts._twistw import run
         else:
             from twisted.scripts.twistd import run
         run()
