@@ -1,5 +1,15 @@
 2007-02-06  Brian Warner  <warner@lothar.com>
 
+	* buildbot/clients/debug.py: hush pyflakes warnings by removing a
+	redundant import
+	* buildbot/scripts/startup.py: same, by removing twisted-1.3.0
+	compatibility
+	* buildbot/status/builder.py: same, by requiring cStringIO
+	* buildbot/status/words.py: same, remove twisted-1.3.0 compat
+	* buildbot/test/test_vc.py: same
+	* buildbot/test/test_web.py:
+	* buildbot/test/test_steps.py: same, remove unused import
+
 	* buildbot/status/html.py (StatusResourceBuild.body): oops, close
 	the FORM tag
 
